[tool.poetry]
name = "collude-api"
version = "0.1.0"
description = ""
authors = ["Travis Aucoin <travisdevaucoin@gmail.com>"]
readme = "README.md"
packages = [{include = "collude_api"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
psycopg = {extras = ["binary"], version = "^3.1.4"}
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
